# quarter

./: .gitattributes  .gitmodules  .hgsub  .hgsubstate  AUTHORS  Basic_8h_source.html  CMakeLists.txt  ChangeLog  DragDropHandler_8h_source.html  EventFilter_8h_source.html  FocusHandler_8h_source.html  INSTALL  InputDevice_8h_source.html  Keyboard_8h_source.html  Makefile.am  Makefile.in  Mouse_8h_source.html  NEWS  Quarter-1.tag  Quarter.pc.cmake.in  Quarter.pc.in  QuarterConfig.cmake.in  QuarterWidgetPlugin.html  QuarterWidgetPlugin_8h_source.html  QuarterWidget_8h_source.html  Quarter_8h_source.html  README  README.MACOSX  README.WIN32  README.md  aclocal.m4  annotated.html  annotated_dup.js  appveyor.yml  bitbucket-pipelines.yml  classQDesignerCustomWidgetInterface.html  classQGLWidget.html  classQObject.html  classSIM_1_1Coin3D_1_1Quarter_1_1DragDropHandler-members.html  classSIM_1_1Coin3D_1_1Quarter_1_1DragDropHandler.html  (+64 more)
.github/workflows/: codeql.yml  continuous-integration-workflow.yml  documentation-workflow.yml
CMakeMacros/Modules/: FindCoin.cmake  SimQtMacros.cmake
SIMCMakeMacros/: FindCoin.cmake  FindSpacenav.cmake  README  SimArguments.cmake  SimFind.cmake  SimMSVC.cmake  SimQtMacros.cmake
cfg/: depcomp  gendsp.pl.in  ltmain.sh
cpack.d/: CMakeLists.txt  CPackConfig-base.cmake.in  CPackConfig-fedora.cmake.in  README
docs/: ChangeLog.v1.0.0  ChangeLog.v1.1.0  ChangeLog.v1.2.0  ChangeLog.v1.2.1  ChangeLog.v1.2.2  ChangeLog.v1.2.3  RELEASE.txt  quarter.doxygen.awesome.cmake.in  quarter.doxygen.cmake.in  quarter.doxygen.in
docs/doxygen/: stylesheet.css
docs/doxygen-awesome/: header.html.cmake.in
docs/doxygen-awesome/doxygen-custom/: header.html
html/: Makefile.am  Makefile.in
include/: Makefile.am  Makefile.in  Makefile.inc
include/Quarter/: Basic.h  CoinApplication.h  CoinWidget.h  DeviceHandler.h  DropManager.h  KeyboardHandler.h  Makefile.am  Makefile.in  MouseHandler.h  QtCoinCompatibility.h  Quarter.h  QuarterApplication.h  QuarterWidget.h
include/Quarter/devices/: ContextMenuHandler.h  DeviceHandler.h  DeviceManager.h  DragDropHandler.h  InputDevice.h  Keyboard.h  KeyboardHandler.h  Makefile.am  Makefile.in  Mouse.h  MouseHandler.h  SpaceNavigatorDevice.h
include/Quarter/eventhandlers/: ContextMenuHandler.h  DragDropHandler.h  EventFilter.h  EventHandler.h  EventManager.h  Makefile.am  Makefile.in
packaging/: description-summary.txt
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  enums_0.js  enums_1.js  enums_2.js  functions_0.js  functions_1.js  functions_10.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  (+32 more)
src/: CMakeLists.txt  Makefile.am  Makefile.in  src.pro
src/Quarter/: AltKeyHandler.cpp  AltKeyHandler.h  CMakeLists.txt  CoinApplication.cpp  CoinWidget.cpp  ContextMenu.cpp  ContextMenu.h  DeviceManager.cpp  DeviceManager.h  DragDropHandler.cpp  DropManager.cpp  EventFilter.cpp  EventHandler.cpp  FocusHandler.cpp  FocusHandler.h  ImageReader.cpp  ImageReader.h  InputDevice.cpp  InteractionMode.cpp  InteractionMode.h  Keyboard.cpp  KeyboardHandler.cpp  KeyboardP.cpp  KeyboardP.h  Makefile.am  Makefile.in  Mouse.cpp  MouseHandler.cpp  NativeEvent.cpp  NativeEvent.h  QtCoinCompatibility.cpp  Quarter.cpp  Quarter.pro  Quarter.rc.cmake.in  QuarterApplication.cpp  QuarterP.cpp  QuarterP.h  QuarterWidget.cpp  QuarterWidgetP.cpp  QuarterWidgetP.h  (+5 more)
src/Quarter/devices/: ContextMenuHandler.cpp  ContextMenuHandlerP.cpp  ContextMenuHandlerP.h  DeviceHandler.cpp  DeviceManager.cpp  DragDropHandler.cpp  Keyboard.cpp  KeyboardHandler.cpp  KeyboardHandlerP.cpp  KeyboardHandlerP.h  KeyboardP.cpp  KeyboardP.h  Makefile.am  Makefile.in  MouseHandler.cpp
src/Quarter/eventhandlers/: ContextMenu.cpp  ContextMenu.h  ContextMenuHandler.cpp  ContextMenuHandlerP.cpp  ContextMenuHandlerP.h  DragDropHandler.cpp  EventFilter.cpp  EventHandler.cpp  EventManager.cpp  Makefile.am  Makefile.in
src/examples/: CMakeLists.txt  Makefile.am  Makefile.in  MdiMainWindow.cpp  MdiMainWindow.h  MdiQuarterWidget.cpp  MdiQuarterWidget.h  QuarterViewer.cpp  QuarterViewer.h  QuarterViewer.ui  coinwidget.ui  directui.cpp  dynamicui.cpp  examiner.cpp  examples.pro  inheritui.cpp  mdi.cpp  minimal.cpp  quarterviewer.qrc  quarterwidget.ui  superimposition.cpp  viewer.cpp  viewer.pro  viewer.qrc
src/plugins/: CMakeLists.txt  CoinWidgetPlugin.cpp  CoinWidgetPlugin.h  Makefile.am  Makefile.in  QuarterWidgetPlugin.cpp  QuarterWidgetPlugin.h  QuarterWidgetPlugin.qrc  QuarterWidgetPlugin.rc.cmake.in  plugins.pro
src/unit-tests/events/: EventTranslation.cpp  EventTranslation.h  events.cpp  events.pro
